<resources>
    <string name="app_name">WebBrowser</string>

    <string name="go_to">go to</string>
    <string name="distance">distance</string>
    <string name="font_size">font size</string>
    <string name="ok">ok</string>
    <string name="brightness">brightness</string>
    <string name="size_factor">size factor</string>
    <string name="brightness_factor">brightness factor</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calibrate">Calibrate!</string>
    <string name="reset">Reset</string>
    <string name="averageEyeDistance">Avg. Eye Distance</string>
    <string name="processTime">Process Time</string>
    <string name="currentDistance">Distance</string>
    <string name="confidence">Confidence</string>
    <string name="changeSize">Size</string>
    <string name="choose_cam_size">Choose Cam. Size</string>
    <string name="lastEyeDistance">Last eye dist.</string>
    <string name="changeAvgNum">Avg. Num.</string>
    <string name="measurementsLeft">Measurements left</string>
    <string name="finishAndSend">Send!</string>
    <string name="showMiddlePoint">Middle eye point</string>
    <string name="showEyePoints">Eye points</string>

    <!-- 	Start Page -->
    <string name="ProbantName">Probant Name:</string>
    <string name="CamResolution">Camera Resolution</string>
    <string name="AverageMeasurementNum">Avg. Meas. Num.</string>
    <string name="CalibrationDistance">Calibration Distance</string>
    <string name="StartMeasurement">Start Measurement</string>
    <string name="fillIn">Fill out !</string>

    <!-- 	Image desctriptions -->
    <string name="processedFrameDesctiption">Last processed frame</string>

    <!-- 	Colors -->
    <color name="white">#FFFFFF</color>
    <color name="red">#FF0000</color>
    <color name="green">#00FF00</color>
    <color name="yellow">#FFFF00</color>
</resources>
